--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,13 @@ memchr = "2.4.0"
 once_cell = "1.8.0"
 plthook = "0"
 
+[build-dependencies]
+generator = { path = "generator" }
+
 [lib]
 crate-type = [ "cdylib" ]
+
+[workspace]
+members = [
+  "generator"
+]
