Settings for profile.release.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ plthook = "0"
 [build-dependencies]
 generator = { path = "generator" }
 
+[profile.release]
+lto = true
+incremental = false
+
 [lib]
 crate-type = [ "cdylib" ]
 
