--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ libc = "0"
 memchr = "2.4.0"
 once_cell = "1.8.0"
 plthook = "0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 
 [build-dependencies]
 generator = { path = "generator" }
