--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "Apache-2.0"
 
 [dependencies]
 bash-builtins = "0"
-chrono = "0.4.19"
+chrono = { version = "0.4.19", features = ["serde"] }
 libc = "0"
 memchr = "2.4.0"
 once_cell = "1.8.0"
