Use atexit(3) to restore original libc functions.
Instead of relying on the call to unload from bash, the builtin registers a
function in atexit, so it will be called by the linker when the shared object
is closed.

The Replacement instances are stored in a static variable.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ serde_json = "1"
 [build-dependencies]
 generator = { path = "generator" }
 
+[features]
+option-for-panics = []
+
 [profile.release]
 lto = true
 incremental = false
