--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ once_cell = "1.8.0"
 plthook = "0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+unicode-width = "0.1.8"
 
 [build-dependencies]
 generator = { path = "generator" }
