When build release packages, use 'latest' tag for every OS.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,8 +29,8 @@ jobs:
       matrix:
         os:
           - tarball
-          - debian:bullseye
-          - ubuntu:21.10
+          - debian
+          - ubuntu
           - fedora
           - opensuse/tumbleweed
     steps:
