--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           - debian
           - ubuntu
           - fedora
-          - opensuse/tumbleweed
+          - opensuse/leap
     steps:
       - uses: actions/checkout@v2
 
